Fix RegisterModal
-Add state for open and close RegisterModal when user did click in "Añadir al carrito" in ViewProduct component.
-Fix banner and images-group width (both did horizontal scroll)

--- a/src/components/AnimeContainer/AnimeContainer.css
+++ b/src/components/AnimeContainer/AnimeContainer.css
@@ -6,7 +6,7 @@
 }
 
 .images-group {
-  width: 100vw;
+  width: 95vw;
   display: flex;
   justify-content: space-around;
 }
